<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
		http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.oxerr</groupId>
	<artifactId>peatio-client</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>Peatio Client</name>
	<description>
	<![CDATA[
		Client for <a href="http://peatio.com">Peatio</a>.
	]]>
	</description>
	<url>https://oxerr.org/peatio-client/</url>
	<inceptionYear>2015</inceptionYear>
	<licenses>
		<license>
			<name>The BSD 2-Clause License</name>
			<url>http://opensource.org/licenses/bsd-license.php</url>
			<distribution>manual</distribution>
		</license>
	</licenses>
	<developers>
		<developer>
			<id>sutra</id>
			<name>Joe Zhou</name>
			<email>zhoushuqun@gmail.com</email>
			<url>https://shuqun.com</url>
			<roles>
				<role>owner</role>
				<role>developer</role>
			</roles>
			<timezone>+8</timezone>
			<properties>
				<legalGivenName>Shuqun</legalGivenName>
				<legalSurname>Zhou</legalSurname>
			</properties>
		</developer>
	</developers>
	<prerequisites>
		<maven>3.0.1</maven>
	</prerequisites>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>
	<modules>
		<module>peatio-client-rest</module>
		<module>peatio-client-websocket</module>
		<module>peatio-client-examples</module>
	</modules>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>2.6.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>2.8.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>2.5.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>2.5</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>2.7</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.4</version>
					<dependencies>
						<dependency>
							<groupId>org.apache.maven.wagon</groupId>
							<artifactId>wagon-ssh</artifactId>
							<version>2.8</version>
						</dependency>
					</dependencies>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.18.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-project-info-reports-plugin</artifactId>
					<version>2.7</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.1</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jxr-plugin</artifactId>
				<version>2.5</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>3.3</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>2.18.1</version>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>2.6</version>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<version>3.0.0</version>
			</plugin>
		</plugins>
	</reporting>
	<dependencyManagement>
		<dependencies>

			<!-- JSR 353: Java API for JSON Processing -->
			<dependency>
				<groupId>javax.json</groupId>
				<artifactId>javax.json-api</artifactId>
				<version>1.0</version>
			</dependency>

			<!-- JSR 356: Java API for WebSocket -->
			<dependency>
				<groupId>javax.websocket</groupId>
				<artifactId>javax.websocket-client-api</artifactId>
				<version>1.1</version>
			</dependency>

			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>3.3.2</version>
			</dependency>

			<!-- JSR 353: Java API for JSON Processing - Reference Implementation -->
			<dependency>
				<groupId>org.glassfish</groupId>
				<artifactId>javax.json</artifactId>
				<version>1.0.4</version>
			</dependency>

			<!-- JSR 356: Java API for WebSocket - Reference Implementation -->
			<dependency>
				<groupId>org.glassfish.tyrus</groupId>
				<artifactId>tyrus-container-grizzly-client</artifactId>
				<version>1.9</version>
			</dependency>

			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>1.7.10</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-core</artifactId>
				<version>2.4.3</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>2.4.3</version>
			</dependency>
			<!--
				For class com.sun.ws.rs.ext.RuntimeDelegateImpl,
				the implementation of javax.ws.rs.core.UriBuilder
			-->
			<dependency>
				<groupId>com.sun.jersey</groupId>
				<artifactId>jersey-client</artifactId>
				<version>1.12</version>
			</dependency>
			<dependency>
				<groupId>com.xeiam.xchange</groupId>
				<artifactId>xchange-core</artifactId>
				<version>2.2.0-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>1.1.2</version>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.12</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<scm>
		<url>https://github.com/sutra/peatio-client</url>
	</scm>
	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/sutra/peatio-client/issues</url>
	</issueManagement>
	<distributionManagement>
		<site>
			<id>oxerr.org</id>
			<url>scp://oxerr.org/usr/local/www/peatio-client/</url>
		</site>
	</distributionManagement>
</project>
